web ui interface sap is

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -805,6 +805,7 @@
                                     </fieldset>
                                     <fieldset class="border-primary">
                                         <legend class="text-primary">@IDSRWTResource.title_sap_inbound_delivery</legend>
+                                        <div class="alert" id="sap-is-alert"></div>
                                         <div class="form-row">
                                             <div class="col-md-6 mb-1 text-left">
                                                 <label for="SAP_inbound_delivery_num_input_sipply" class="col-form-label">@IDSRWTResource.title_num_input_sipply:</label>
@@ -923,7 +924,6 @@
                                             </div>
                                         </fieldset>
                                     </fieldset>
-
                                 </div>
                             </div>
                         </div>
