--- a/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
@@ -16,11 +16,12 @@
 
     <script src="~/Scripts/view/shared/common.js"></script> <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/api/shared.js"></script> <!-- Общая библиотека методов API -->
+    <script src="~/Scripts/api/ids_sap.js"></script> <!-- Class API SAP функции для работы с САП -->
     <script src="~/Scripts/api/uz_directory.js"></script> <!-- Class API УЗ Справочники -->
     <script src="~/Scripts/api/ids_directory.js"></script> <!-- Class API ИДС Справочники -->
     <script src="~/Scripts/api/metrans.js"></script> <!-- Class API МЕТРАНС -->
     <script src="~/Scripts/api/ids_transfer.js"></script> <!-- Class API ИДС Переносы -->
-    <script src="~/Scripts/api/ids_rwt_incoming.js"></script> <!-- Class API ИДС Прием вагонов -->
+    <script src="~/Scripts/api/ids_rwt.js"></script> <!-- Class API ИДС Прием вагонов -->
 
     <script src="~/Scripts/view/directory/search_wagon.js"></script> <!--  -->
     <script>
@@ -73,7 +74,7 @@
                                 <div class="card-body collapse show" id="approaches_wagon">
                                     @*<fieldset class="border-primary">
 
-                                    </fieldset>*@
+                                        </fieldset>*@
                                     <table class="table table-striped table-bordered" id="table_approaches_wagon" style="width:100%;"></table>
                                 </div>
                             </div><!-- Конец карточки -->
@@ -90,7 +91,7 @@
                                 <div class="card-body collapse show" id="arrival_wagon">
                                     @*<fieldset class="border-primary">
 
-                                    </fieldset>*@
+                                        </fieldset>*@
                                     <table class="table table-striped table-bordered" id="table_arrival_wagon" style="width:100%;"></table>
                                 </div>
                             </div><!-- Конец карточки -->
@@ -107,7 +108,7 @@
                                 <div class="card-body collapse show" id="internal_wagon">
                                     @*<fieldset class="border-primary">
 
-                                    </fieldset>*@
+                                        </fieldset>*@
                                     <table class="table table-striped table-bordered" id="table_internal_wagon" style="width:100%;"></table>
                                 </div>
                             </div><!-- Конец карточки -->
@@ -124,7 +125,7 @@
                                 <div class="card-body collapse show" id="outgoing_wagon">
                                     @*<fieldset class="border-primary">
 
-                                    </fieldset>*@
+                                        </fieldset>*@
                                     <table class="table table-striped table-bordered" id="table_outgoing_wagon" style="width:100%;"></table>
                                 </div>
                             </div><!-- Конец карточки -->
