--- a/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
@@ -16,11 +16,12 @@
 
     <script src="~/Scripts/view/shared/common.js"></script> <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/api/shared.js"></script> <!-- Общая библиотека методов API -->
+    <script src="~/Scripts/api/ids_sap.js"></script> <!-- Class API SAP функции для работы с САП -->
     <script src="~/Scripts/api/uz_directory.js"></script> <!-- Class API УЗ Справочники -->
     <script src="~/Scripts/api/ids_directory.js"></script> <!-- Class API ИДС Справочники -->
     <script src="~/Scripts/api/metrans.js"></script> <!-- Class API МЕТРАНС -->
     <script src="~/Scripts/api/ids_transfer.js"></script> <!-- Class API ИДС Переносы -->
-    <script src="~/Scripts/api/ids_rwt_incoming.js"></script> <!-- Class API ИДС Прием вагонов -->
+    <script src="~/Scripts/api/ids_rwt.js"></script> <!-- Class API ИДС Прием вагонов -->
 
     <script src="~/Scripts/view/directory/wagon_marking.js"></script> <!--  -->
 }
@@ -54,7 +55,7 @@
                 <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
                     <div class="card">
                         <div class="card-header" id="sostav_info">
-                            
+
                             @*<label id="sostav_info"></label>*@
                         </div>
                         <div class="card-body">
