--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -18,10 +18,11 @@
 
     <script src="~/Scripts/view/shared/common.js"></script> <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/api/shared.js"></script> <!-- Общая библиотека методов API -->
+    <script src="~/Scripts/api/ids_sap.js"></script> <!-- Class API SAP функции для работы с САП -->
     <script src="~/Scripts/api/uz_directory.js"></script> <!-- Class API УЗ Справочники -->
     <script src="~/Scripts/api/ids_directory.js"></script> <!-- Class API ИДС Справочники -->
     <script src="~/Scripts/api/metrans.js"></script> <!-- Class API МЕТРАНС -->
-    <script src="~/Scripts/api/ids_rwt_incoming.js"></script> <!-- Class API ИДС Прием вагонов -->
+    <script src="~/Scripts/api/ids_rwt.js"></script> <!-- Class API ИДС Прием вагонов -->
     <script src="~/Scripts/api/ids_transfer.js"></script> <!-- Class API ИДС Переносы -->
     <script src="~/Scripts/api/uz_sms.js"></script> <!-- Class API Работа с модулем согласования -->
 
