add functional select sap is in web save new string & update string sap_in

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -830,7 +830,7 @@
                                             </div>
                                             <div class="col-md-4 mb-1 text-left">
                                                 <label for="SAP_inbound_delivery_dt_sipply" class="col-form-label">@IDSRWTResource.title_dt_input_sipply:</label>
-                                                <input type="text" class="form-control" id="SAP_inbound_delivery_dt_sipply" name="SAP_inbound_delivery_dt_sipply" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                <input type="datetime" class="form-control" id="SAP_inbound_delivery_dt_sipply" name="SAP_inbound_delivery_dt_sipply" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
