--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -83,11 +83,8 @@
                         <a class="dropdown-item" href="#" id="report_apaca_kr_gl">Заявка на участие с попутным Ком. Актом ст. КР Гл.</a>
 
                         <a class="dropdown-item" href="#" id="">Акт общей формы</a>
+                        <a class="dropdown-item" href="#" id="report_dg20">Накладная предприятия ДГ-20</a>
                         <a class="dropdown-item" href="#" id="">Накладная предприятия ДГ-20</a>
-                        <a class="dropdown-item" href="#" id="">Накладная предприятия ДГ-20</a>
-                        @*<a class="dropdown-item" href="#">Заявка на выдачу с проверкой груза КР Главный</a>
-                            <a class="dropdown-item" href="#">Заявка на выдачу с проверкой груза КР</a>
-                            <a class="dropdown-item" href="#">Заявка на взвешивание</a>*@
                     </div>
                 </div>
                 <input class="form-control-sm" type="text" placeholder="Search" aria-label="Search">
