--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -124,8 +124,8 @@
                         <div class="col-xl-8">
                             <div class="card border-info">
                                 <div class="card-header">Перечень вагонов</div>
-                                <div class="card-body text-info">
-
+                                <div class="card-body">
+                                    <table id="wagons-way" class="compact table" style="width:100%; table-layout: fixed"></table>
                                 </div>
                             </div>
                         </div>
