view Wagons seect

--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -124,7 +124,7 @@
                         <div class="col-xl-8">
                             <div class="card border-info">
                                 <div class="card-header">Перечень вагонов</div>
-                                <div class="card-body">
+                                <div class="card-body" style="font-size:13px">
                                     <table id="wagons-way" class="compact table" style="width:100%; table-layout: fixed"></table>
                                 </div>
                             </div>
