--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -139,7 +139,24 @@
 
 <div id="loading_way_detail" title="" style="display:none">
     <form id="form_loading_way_detail">
-        
+        <div>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#general_loading" role="tab" aria-controls="home" aria-selected="true">Общая</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#operators_loading" role="tab" aria-controls="profile" aria-selected="false">Операторы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#cargo_loading" role="tab" aria-controls="contact" aria-selected="false">Груз</a>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="general_loading" role="tabpanel" aria-labelledby="home-tab">.</div>
+                <div class="tab-pane fade" id="operators_loading" role="tabpanel" aria-labelledby="profile-tab">..</div>
+                <div class="tab-pane fade" id="cargo_loading" role="tabpanel" aria-labelledby="contact-tab">...</div>
+            </div>
+        </div>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </form>
