--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -168,14 +168,14 @@
             <label for="select_wagon_side">Сторона:</label>
             @*<input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">*@
             <select class="custom-select form-control mx-sm-3" id="select_wagon_side" name="select_wagon_side">
-                <option selected value="1">Голова</option>
-                <option value="2">Хвост</option>
+                @*<option selected value="1">Голова</option>
+                <option value="2">Хвост</option>*@
             </select>
         </div>
         <div class="form-group">
             <label for="select_wagon_side">Кол:</label>
-            <input type="number" class="form-control mx-sm-3" id="select_wagon_count" style="width:70px" name="select_wagon_count" placeholder="">
-            <button type="submit" class="btn btn-primary">Ок</button>
+            <input type="number" class="form-control mx-sm-3" id="select_wagon_count" name="select_wagon_count" style="width:70px" placeholder="">
+            <button class="btn btn-primary" id="select_ok">Ок</button>
         </div>
         
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
