--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -125,7 +125,7 @@
                             <div class="card border-info">
                                 <div class="card-header">Перечень вагонов</div>
                                 <div class="card-body" style="font-size:13px">
-                                    <table id="wagons-way" class="compact table" style="width:100%; table-layout: fixed"></table>
+                                    <table id="wagons-way" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
                                 </div>
                             </div>
                         </div>
