--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -879,17 +879,17 @@
                                                     </div>
                                                 </div>
                                                 @*<div class="col-md-4 mb-1 text-left">
-                                                    <label for="SAP_inbound_delivery_warehouse_shop" class="col-form-label">@IDSRWTResource.title_warehouse_shop:</label>
-                                                    <input type="text" class="form-control" id="SAP_inbound_delivery_warehouse_shop" name="SAP_inbound_delivery_warehouse_shop" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
-                                                    <div class="invalid-feedback">
+                                                        <label for="SAP_inbound_delivery_warehouse_shop" class="col-form-label">@IDSRWTResource.title_warehouse_shop:</label>
+                                                        <input type="text" class="form-control" id="SAP_inbound_delivery_warehouse_shop" name="SAP_inbound_delivery_warehouse_shop" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                        <div class="invalid-feedback">
+                                                        </div>
                                                     </div>
-                                                </div>
-                                                <div class="col-md-2 mb-1 text-left">
-                                                    <label for="SAP_inbound_delivery_warehouse_date" class="col-form-label">@IDSRWTResource.title_warehouse_date:</label>
-                                                    <input type="text" class="form-control" id="SAP_inbound_delivery_warehouse_date" name="SAP_inbound_delivery_warehouse_date" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
-                                                    <div class="invalid-feedback">
-                                                    </div>
-                                                </div>*@
+                                                    <div class="col-md-2 mb-1 text-left">
+                                                        <label for="SAP_inbound_delivery_warehouse_date" class="col-form-label">@IDSRWTResource.title_warehouse_date:</label>
+                                                        <input type="text" class="form-control" id="SAP_inbound_delivery_warehouse_date" name="SAP_inbound_delivery_warehouse_date" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                        <div class="invalid-feedback">
+                                                        </div>
+                                                    </div>*@
                                             </div>
                                         </fieldset>
                                         <fieldset class="border-secondary">
@@ -908,17 +908,17 @@
                                                     </div>
                                                 </div>
                                                 @*<div class="col-md-4 mb-1 text-left">
-                                                    <label for="SAP_inbound_delivery_warehouse_shop_new" class="col-form-label">@IDSRWTResource.title_warehouse_shop:</label>
-                                                    <input type="text" class="form-control" id="SAP_inbound_delivery_warehouse_shop_new" name="SAP_inbound_delivery_warehouse_shop_new" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
-                                                    <div class="invalid-feedback">
+                                                        <label for="SAP_inbound_delivery_warehouse_shop_new" class="col-form-label">@IDSRWTResource.title_warehouse_shop:</label>
+                                                        <input type="text" class="form-control" id="SAP_inbound_delivery_warehouse_shop_new" name="SAP_inbound_delivery_warehouse_shop_new" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                        <div class="invalid-feedback">
+                                                        </div>
                                                     </div>
-                                                </div>
-                                                <div class="col-md-2 mb-1 text-left">
-                                                    <label for="SAP_inbound_delivery_warehouse_date_new" class="col-form-label">@IDSRWTResource.title_warehouse_date:</label>
-                                                    <input type="text" class="form-control" id="SAP_inbound_delivery_warehouse_date_new" name="SAP_inbound_delivery_warehouse_date_new" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
-                                                    <div class="invalid-feedback">
-                                                    </div>
-                                                </div>*@
+                                                    <div class="col-md-2 mb-1 text-left">
+                                                        <label for="SAP_inbound_delivery_warehouse_date_new" class="col-form-label">@IDSRWTResource.title_warehouse_date:</label>
+                                                        <input type="text" class="form-control" id="SAP_inbound_delivery_warehouse_date_new" name="SAP_inbound_delivery_warehouse_date_new" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                        <div class="invalid-feedback">
+                                                        </div>
+                                                    </div>*@
                                             </div>
                                         </fieldset>
                                     </fieldset>
@@ -1114,6 +1114,66 @@
             <legend class="text-primary">Вагоны</legend>
             <table class="table table-striped table-bordered mb-1" id="table-list-wagons" style="width:160px; table-layout: fixed; margin:0; font-size:0.8rem;"></table>
         </fieldset>
+        <!-- Allow form submission with keyboard without duplicating the dialog button -->
+        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+    </form>
+</div>
+
+<div id="rep-select-wagons" title="" style="display:none">
+    <div class="alert" id="rep-select-wagons-alert"></div>
+    <form id="form-rep-select-wagons">
+        <table>
+            <tr>
+                <td rowspan="3">
+                    <fieldset class="border-primary" style="margin-right:20px; width:200px;">
+                        <legend class="text-primary">Вагоны</legend>
+                        <div id="fs-list-nums">
+                            <ul id="list_nums" class="connectedSortable">
+                                @*<li class="ui-state-default">Item 1</li>
+                <li class="ui-state-default">Item 2</li>
+                <li class="ui-state-default">Item 3</li>
+                <li class="ui-state-default">Item 4</li>
+                <li class="ui-state-default">Item 5</li>
+                <li class="ui-state-default">Item 6</li>
+                <li class="ui-state-default">Item 7</li>
+                <li class="ui-state-default">Item 8</li>
+                <li class="ui-state-default">Item 9</li>
+                <li class="ui-state-default">Item 10</li>*@
+                            </ul>
+                        </div>
+
+                    </fieldset>
+                </td>
+                <td>
+                    <fieldset class="border-primary" style="margin-right:20px; width:200px;">
+                        <legend class="text-primary">1 страница</legend>
+                        <div id="fs-report-page1">
+                            <ul id="report_page1" class="connectedSortable"></ul>
+                        </div>
+                    </fieldset>
+                </td>
+                <td>
+                    <fieldset class="border-primary" style="margin-right:20px; width:200px;">
+                        <legend class="text-primary">2 страница</legend>
+                        <div id="fs-report-page2">
+                            <ul id="report_page2" class="connectedSortable"></ul>
+                        </div>
+
+                    </fieldset>
+                </td>
+            </tr>
+        </table>
+
+
+
+
+
+
+
+        @*<fieldset class="border-primary">
+                <legend class="text-primary">Вагоны</legend>
+                <table class="table table-striped table-bordered mb-1" id="table-list-wagons" style="width:160px; table-layout: fixed; margin:0; font-size:0.8rem;"></table>
+            </fieldset>*@
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </form>
