end report dg20

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -84,7 +84,7 @@
 
                         <a class="dropdown-item" href="#" id="">Акт общей формы</a>
                         <a class="dropdown-item" href="#" id="report_dg20">Накладная предприятия ДГ-20</a>
-                        <a class="dropdown-item" href="#" id="">Накладная предприятия ДГ-20</a>
+                        <a class="dropdown-item" href="#" id="">Путевая</a>
                     </div>
                 </div>
                 <input class="form-control-sm" type="text" placeholder="Search" aria-label="Search">
